# sion

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bun.lockb  index.ts  justfile  package.json  turbo.json
ark-circuits/: Cargo.toml  justfile  output.json  prover_inputs.json
ark-circuits/examples/: bound_check.rs  debug.rs  do.rs  mul.rs  now.rs  preimage_and_range.rs  range_proof.rs  sha256.rs  sha256_preimage_proof.rs
ark-circuits/src/lib/: bound_check.rs  mod.rs  serde_utils.rs  sha256.rs
ark-circuits/tests/: mul.rs
astar-wasm/: Cargo.toml  Makefile.toml
astar-wasm/src/: lib.rs
crates-dev/anchor/avm/: Cargo.toml
crates-dev/anchor/cli/: Cargo.toml
crates-dev/anchor/spl/: Cargo.toml
crates-dev/anoncreds-clsignatures-rs/: Cargo.toml
crates-dev/anoncreds-rs/: Cargo.toml
crates-dev/anoncreds-wasm/: Cargo.toml  README.md  output.json  vp_hex.txt
crates-dev/anoncreds-wasm/demo-js/: package.json  pnpm-lock.yaml
crates-dev/anoncreds-wasm/examples/: demo.rs  dump_cbor.rs  dump_json.rs  dump_messagepack.rs
crates-dev/anoncreds-wasm/pkg/: anoncreds.js  anoncreds_bg.wasm  anoncreds_bg.wasm.d.ts
crates-dev/anoncreds-wasm/src/services/: issuer.rs
crates-dev/anoncreds-wasm/src/wasm/: error.rs  mod.rs
crates-dev/bbs/: Cargo.toml
crates-dev/bbs/examples/: gen.rs
crates-dev/credx/: Cargo.toml
crates-dev/sion/: Cargo.toml
crates-dev/sion-js/: Cargo.toml
crates-dev/sion-js/examples/nodejs/: bun.lockb  pnpm-lock.yaml
crates-dev/sion-js/examples/nodejs/scripts/: verify_proof.js  verify_signature.js
crates-dev/sion-js/src/: lib.rs
crates-dev/sion-old/: Makefile.toml
crates-solana/: Cargo.toml
crates-solana/crates/bls12_381_plus/: Cargo.toml
crates-solana/crates/blsful/: Cargo.toml
crates-solana/crates/blstrs/: CHANGELOG.md  Cargo.toml  README.md
crates-solana/crates/blstrs/src/: fp2.rs  g1.rs  g2.rs  gt.rs  lib.rs  macros.rs  pairing.rs  serde_impl.rs
crates-solana/crates/bulletproofs/: Cargo.toml
crates-solana/crates/bulletproofs/src/: linear_proof.rs
crates-solana/crates/bulletproofs/src/r1cs/: constraint_system.rs
crates-solana/crates/bulletproofs/src/range_proof/: dealer.rs  messages.rs
crates-solana/crates/credx/: Cargo.toml  Makefile.toml
crates-solana/crates/curve25519-dalek/: Cargo.toml
crates-solana/crates/ed25519-dalek/: Cargo.toml
crates-solana/crates/elliptic-curve/: Cargo.toml
crates-solana/crates/k256/: Cargo.toml
crates-solana/crates/vsss-rs/: Cargo.toml
crates/anchor/avm/: Cargo.toml
crates/anchor/client/: Cargo.toml
crates/anoncreds-rs/: Cargo.toml
crates/anoncreds-wasm/: .gitignore  Cargo.toml  Cargo2.toml  Cargo3.toml  vp_cbor.hex
crates/anoncreds-wasm/demo-js/: index.ts
crates/anoncreds-wasm/examples/: dump_avro.rs  dump_bare.rs  dump_bcs.rs  dump_bincode.rs  try.rs
crates/anoncreds-wasm/pkg/: anoncreds.d.ts  anoncreds_bg.js  package.json
crates/anoncreds-wasm/src/: lib.rs
crates/anoncreds-wasm/tests/: demo.rs
crates/bbs/: Cargo.toml
crates/bbs/src/: lib.rs
crates/bls12_381_plus/: Cargo.toml
crates/blsful/: Cargo.toml
crates/blstrs/: Cargo.toml
crates/bulletproofs-amcl/: Cargo.toml
crates/bulletproofs-amcl/dumps/: bcs_base58.txt  comms1_cbor_base58.txt  proof_bsc_base58.txt  proof_cbor_base58.txt
crates/bulletproofs-amcl/examples/: gen.rs  prove.rs
crates/bulletproofs-bls/: Cargo.toml
crates/bulletproofs-bls/src/: transcript.rs
crates/bulletproofs-bls/src/r1cs/: verifier.rs
crates/bulletproofs-bls/src/range_proof/: mod.rs
crates/bulletproofs-bls/tests/: range_proof.rs
crates/bulletproofs-wasm/: Cargo.toml
crates/bulletproofs-wasm/src/range_proof/: party.rs
crates/credx/: Cargo.toml
crates/credx-clean/: Cargo.toml  Makefile.toml
crates/credx-verifier/: Cargo.toml
crates/credx/dumps/: bcs_bs58.txt
crates/elliptic-curve/: Cargo.toml
crates/merlin/: Cargo.toml
crates/merlin/src/: lib.rs  transcript.rs
crates/miracl_amcl/: Cargo.toml
crates/miracl_amcl/src/: big.rs  ecp.rs  fp.rs  lib.rs
crates/sion/: Cargo.toml
crates/sion-js/: Cargo.toml  Makefile.toml
crates/sion-old/: Cargo.toml
crates/sion-old/examples/: proof.rs  sd_script.rs  signature.rs
crates/sion-old/src/lib/: proof_request.rs  prover.rs  signature.rs
crates/sion/examples/: sd.rs  sd_entries.rs  sig.rs  verify_proof.rs
crates/sion/src/lib/: bbs_utils.rs  entry.rs  issuer.rs  mod.rs  nonce.rs  proof_request.rs  prover.rs  verifier.rs
crates/sion/tests/: generate_proof.rs  verify_proof.rs  verify_signature.rs
crates/vsss-rs/: Cargo.toml
gdrive-ui/: biome.json  package.json  tailwind.config.ts
icp/: Cargo.toml  Makefile.toml  README.md  dfx.json  package-lock.json  package.json  pnpm-lock.yaml  webpack.config.js
icp/src/icpx_backend/: Cargo.toml  Makefile.toml  icpx_backend.did
icp/src/icpx_backend/src/: bbs_utils.rs  fixtures.rs  lib.rs  utils.rs
near/: .gitignore  Cargo.toml  Makefile.toml
near/neardev/: dev-account  dev-account.env
near/scripts-ts/: bun.lockb  package.json
near/scripts-ts/scripts/: temp.ts
near/src/: lib.rs
rust/: Cargo.toml  Makefile.toml
rust/examples/: proof.rs  sd.rs  sig.rs
rust/src/: main.rs
sion-prover/: .gitignore  Cargo.toml  Dockerfile  fly.toml  justfile
sion-prover/examples/: bound_check.rs  mul.rs  now.rs  range_proof.rs  sha256_preimage_proof.rs
sion-prover/src/lib/: bound_check.rs  mod.rs  pure_bound_check.rs  serde_utils.rs  sha256.rs
solana/: Cargo.toml  Makefile.toml
solana/counter/: Anchor.toml  Makefile.toml
solana/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
sui/: .gitignore  Makefile.toml
sui/scripts/: bun.lockb  hash.ts  package.json  sui-client-gen.toml
sui/sdk-ts/: biome.json  bun.lockb  package.json  tsconfig.json
typescript/: bun.lockb  package.json
typescript/scripts/: hello.ts  hihi.ts
ui/: .gitignore  next.config.js  package.json  tailwind.config.ts
ui-dev/: package.json
ui-old/: .gitignore  package.json  sui-client-gen.toml  tailwind.config.ts
ui/scripts/: keypair.ts
ui/sdk-ts/: sui-client-gen.toml  vite.config.ts
(+591 files in other folders)
