[workspace]

[package]
edition = "2021"
name = "ark-circuits"
version = "0.1.0"

[lib]
name = "ark_circuits"
path = "src/lib/mod.rs"

[[bin]]
name = "proving_server"
path = "src/bin/proving_server/mod.rs"

[features]
parallel = [
  "ark-ff/parallel",
  "ark-std/parallel",
  "ark-ec/parallel",
  "ark-crypto-primitives/parallel",
]

[dependencies]
anyhow = "1.0.72"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-circom = {git = "https://github.com/gakonst/ark-circom.git"}
ark-crypto-primitives = {version = "0.4.0", features = ["snark", "crh", "r1cs", "prf"]}
ark-ec = {version = "0.4.1", features = ["parallel"]}
ark-ff = {version = "0.4.1", features = ["asm", "parallel"]}
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.1"
ark-snark = "0.4.0"
ark-std = "0.4.0"
axum = "0.6.20"
blake2 = "0.10.6"
blst = "0.3.10"
bs58 = "0.5.0"
byte-slice-cast = "1.2.2"
chrono = "0.4.26"
derive_more = "0.99.16"
fastcrypto = "0.1.5"
fastcrypto-zkp = {git = "https://github.com/MystenLabs/fastcrypto", rev = "fastcrypto-v0.1.7"}
hex = "0.4.3"
num-bigint = {version = "0.4", default-features = false, features = ["rand"]}
num-traits = "0.2.15"
once_cell = "1.16"
poseidon-ark = {git = "https://github.com/arnaucube/poseidon-ark.git", rev = "bf96de3b946e8b343c6b65412bae92f8d32251ad"}
proc-macro2 = "1.0.69"
quote = "1.0.33"
rand = "0.8.5"
regex = "1.7.3"
rustc-hex = "2.1.0"
schemars = "0.8.10"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
serde_with = {version = "3.4.0", features = ["hex"]}
sha2 = "0.10.7"
syn = "2.0.39"
tokio = {version = "1.32.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.4.1", features = ["cors"]}
tower-layer = "0.3.2"
