[workspace]

[package]
authors = ["fuyutarow"]
edition = "2021"
name = "counter"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]

[dependencies]
bbs_plus = {version = "*", default-features = false}
ink = {version = "4.3.0", default-features = false}
scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2.9", default-features = false, features = ["derive"], optional = true}
# sion = {path = "../crates/sion"}

[dependencies.anoncreds]
default_features = false
features = ["wasm", "serde_only"]
path = "../crates/anoncreds-wasm"

[dev-dependencies]
ink_e2e = {version = "4.3"}
