[package]
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
name = "hello_near"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.1.1"
uint = {version = "0.9.3", default-features = false}

[dependencies.anoncreds]
default_features = false
features = ["wasm", "serde_only"]
path = "../crates/anoncreds-wasm"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[workspace]
members = ["sandbox-rs"]
