[package]
authors = ["Near Inc <hello@near.org>"]
edition = "2021"
name = "hello_near"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.0"
credx = {path = "../crates/credx-clean", default-features = false, features = ["wasm"]}
hex = "0.4.3"
near-sdk = "4.1.1"
serde = {version = "1.0.192", default-features = false, features = ["derive"]}
serde-wasm-bindgen = {version = "0.6", optional = true}
serde_cbor = "0.11.2"
serde_json = {version = "1.0.108", default-features = false}
uint = {version = "0.9.3", default-features = false}

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[workspace]
members = ["sandbox-rs"]
