[workspace]

[package]
edition = "2021"
name = "sino-prover"
version = "0.1.0"

[lib]
name = "ark_circuits"
path = "src/lib/mod.rs"

[[bin]]
name = "proving_server"
path = "src/bin/proving_server/mod.rs"

[features]
parallel = [
  "ark-ff/parallel",
  "ark-std/parallel",
  "ark-ec/parallel",
  "ark-crypto-primitives/parallel",
]

[dependencies]
anyhow = "1.0.75"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-crypto-primitives = {version = "0.4.0", features = ["snark", "crh", "r1cs", "prf"]}
ark-ec = {version = "0.4.2", features = ["parallel"]}
ark-ff = {version = "0.4.2", features = ["asm", "parallel"]}
ark-groth16 = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-serialize = "0.4.2"
ark-snark = "0.4.0"
ark-std = "0.4.0"
axum = "0.7.2"
blake2 = "0.10.6"
blst = "0.3.11"
bs58 = "0.5.0"
byte-slice-cast = "1.2.2"
clap = {version = "4.4.11", features = ["derive"]}
derive_more = "0.99.17"
fastcrypto = "0.1.7"
fastcrypto-zkp = {git = "https://github.com/MystenLabs/fastcrypto", rev = "fastcrypto-v0.1.7"}
hex = "0.4.3"
num-bigint = {version = "0.4", default-features = false, features = ["rand"]}
num-traits = "0.2.17"
once_cell = "1.19"
rand = "0.8.5"
schemars = {version = "0.8.16", features = ["either"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_as = "0.0.1"
serde_json = "1.0.108"
serde_with = {version = "3.4.0", features = ["hex"]}
sha2 = "0.10.8"
tokio = {version = "1.34.0", features = ["full"]}
tower = "0.4.13"
tower-http = {version = "0.5.0", features = ["cors"]}
tower-layer = "0.3.2"
tracing = "0.1.40"
