[workspace]

[package]
authors = [
  "Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>",
]
categories = ["authentication", "cryptography"]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2021"
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]
license = "Apache-2.0"
name = "anoncreds"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
rust-version = "1.58"
version = "0.2.0-dev.5"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
name = "anoncreds"
path = "src/lib.rs"

[features]
default = ["ffi", "logger", "zeroize"]
ffi = ["dep:ffi-support"]
logger = ["dep:env_logger"]
vendored = ["anoncreds-clsignatures/openssl_vendored"]
zeroize = ["dep:zeroize"]

[dependencies]
anoncreds-clsignatures = "0.2.4"
bitvec = {version = "1.0.1", features = ["serde"]}
bs58 = "0.4.0"
env_logger = {version = "0.9.3", optional = true}
ffi-support = {version = "0.4.4", optional = true}
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.10.2"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = {version = "1.0.108", features = ["raw_value"]}
sha2 = "0.10.8"
thiserror = "1.0.50"
zeroize = {version = "*", optional = true, features = ["zeroize_derive"]}

[profile.release]
codegen-units = 1
lto = true
