[workspace]

[package]
authors = [
  "Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>",
]
categories = ["authentication", "cryptography"]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2021"
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]
license = "Apache-2.0"
name = "anoncreds"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
rust-version = "1.58"
version = "0.2.0-dev.2"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]
name = "anoncreds"
path = "src/lib.rs"

[features]
default = ["ffi", "logger", "zeroize", "anoncreds-clsignatures/default"]
ffi = ["dep:ffi-support"]
logger = ["dep:env_logger"]
serde_only = ["anoncreds-clsignatures/serde"]
vendored = ["anoncreds-clsignatures/openssl_vendored"]
wasm = ["anoncreds-clsignatures/serde", "wasm-bindgen", "wasm-logger", "console_error_panic_hook", "serde-wasm-bindgen", "getrandom/js"]
zeroize = ["dep:zeroize"]

[dependencies]
bitvec = {version = "1.0.1", features = ["serde"]}
log = "0.4.20"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.10.2"
serde = {version = "1.0.192", features = ["derive"]}
sha2 = "0.10.8"
thiserror = "1.0.50"

# optional dependencies
anoncreds-clsignatures = {version = "0.2.4", default-features = false, optional = true}
console_error_panic_hook = {version = "0.1.7", optional = true}
env_logger = {version = "0.10.1", optional = true}
ffi-support = {version = "0.4.4", optional = true}
getrandom = {version = "0.2", optional = true}
serde-wasm-bindgen = {version = "0.6", optional = true}
wasm-bindgen = {version = "0.2.88", optional = true}
wasm-logger = {version = "0.2.0", optional = true}
zeroize = {version = "1.6", optional = true, features = ["zeroize_derive"]}

[dev-dependencies]
apache-avro = "0.16.0"
bcs = "0.1.6"
bincode = {version = "1.3.3", features = ["i128"]}
bs58 = "0.5.0"
bson = "2.7.0"
hex = "0.4.3"
rmp-serde = "1.1.2"
serde_bare = "0.5.0"
serde_cbor = "0.11.2"
serde_json = {version = "1.0.108", features = ["raw_value"]}

[profile.release]
codegen-units = 1
lto = true
