[package]
edition = "2021"
name = "sion-js"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
serde = {version = "1.0.192", features = ["derive"]}
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"
sion = {path = '../sion'}
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
wee_alloc = {version = "0.4.5", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
