[package]
authors = [
  "Sean Bowe <ewillbefull@gmail.com>",
  "Jack Grigg <thestr4d@gmail.com>",
  "Mike Lodder <redmike7@gmail.com>",
]
description = """
Implementation of the BLS12-381 pairing-friendly elliptic curve construction.
This is a fork from zkcrypto/bls12_381 but adds hash to curve and multiexponentiation methods
as well as enables multi-pairing without the allocator requirement.
"""
documentation = "https://docs.rs/bls12_381_plus/"
edition = "2021"
homepage = "https://github.com/mikelodder7/bls12_381_plus"
license = "MIT/Apache-2.0"
name = "bls12_381_plus"
repository = "https://github.com/mikelodder7/bls12_381_plus"
version = "0.8.9"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
hex = "0.4"
rand_xorshift = "0.3"
serde_bare = "0.5"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"

[[bench]]
harness = false
name = "groups"
required-features = ["groups"]

[dependencies.elliptic-curve]
default-features = false
features = ["hazmat"]
version = "*"

[dependencies.ff]
default-features = false
version = "0.13"

[dependencies.group]
default-features = false
optional = true
version = "0.13"

[dependencies.pairing]
optional = true
version = "0.23"

[dependencies.rand_core]
default-features = false
version = "0.6"

[dependencies.subtle]
default-features = false
version = "2.4"

[dependencies.zeroize]
default-features = false
version = "1"

[dependencies.serde]
default-features = false
features = ["serde_derive"]
version = "1.0"

[dependencies.hex]
default-features = false
version = "0.4"

[dependencies.arrayref]
version = "0.3"

[features]
alloc = ["group/alloc"]
bits = ["ff/bits"]
default = ["groups", "pairings", "alloc", "bits", "hashing"]
expose-fields = ["groups"]
groups = ["group"]
hashing = ["elliptic-curve/hash2curve"]
pairings = ["groups", "pairing"]
std = []
