[package]
authors = ["Hyperledger Ursa Maintainers"]
edition = "2018"
name = "bulletproofs_amcl"
version = "0.2.0"

[features]
bls381 = ["amcl_wrapper/bls381"]
bn254 = ["amcl_wrapper/bn254"]
default = ["bls381"]
ed25519 = ["amcl_wrapper/ed25519"]
secp256k1 = ["amcl_wrapper/secp256k1"]
serdes = ["bcs", "bs58", "hex", "serde_bare"]

[dependencies]
byteorder = "1.3.1"
criterion = "0.3"
failure = "0.1"
lazy_static = "1.3.0"
merlin = {path = "../merlin"}
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# optional dependencies
bcs = {version = "0.1.6", optional = true}
bs58 = {version = "0.5.0", optional = true}
hex = {version = "0.4.3", optional = true}
serde_bare = {version = "0.5.0", optional = true}

[dependencies.amcl_wrapper]
default-features = false
features = ["bls381"]
version = "0.3.5"

[[bench]]
harness = false
name = "vec_poly_eval"
