[workspace]

[package]
edition = "2021"
name = "credx"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
name = "credx"
path = "src/lib.rs"

[features]
bench = ["bincode", "serde_cbor"]
blst = ["blsful/default", "bulletproofs/default"]
default = ["blst"]
# wasm = ["blsful/rust", "bulletproofs/std", "bulletproofs/rust", "getrandom/js"]
wasm = ["wasm_base", "blsful/rust", "bulletproofs/std", "bulletproofs/rust"]
wasm_base = ["wasm-bindgen", "wasm-logger", "console_error_panic_hook", "serde-wasm-bindgen", "getrandom/js"]

[dependencies]
base64 = "0.21.5"
bcs = {version = "0.1.6"}
bs58 = "0.5.0"
bulletproofs = {git = "https://github.com/cryptidtech/bulletproofs", default-features = false}
hex = "0.4"
indexmap = "2"
merlin = "3"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
regex = "1"
serde = {version = "1", features = ["serde_derive"]}
serde_bare = "0.5"
serde_json = "1"
serde_regex = "1"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.5.0"
uint-zigzag = {version = "0.2", features = ["std"]}
zeroize = {version = "1.6.0", features = ["zeroize_derive"]}

# optional dependencies
bincode = {version = "1.3.3", optional = true}
blsful = {version = "2.4.1", default-features = false, optional = true}
console_error_panic_hook = {version = "0.1.7", optional = true}
getrandom = {version = "0.2.11", optional = true}
serde-wasm-bindgen = {version = "0.6.1", optional = true}
serde_cbor = {version = "0.11", optional = true}
wasm-bindgen = {version = "0.2.88", optional = true}
wasm-logger = {version = "0.2.0", optional = true}

[dev-dependencies]
maplit = "1"
serde_cbor = "0.11"
sha2 = "0.10"

[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.38"
