[package]
edition = "2021"
name = "credx"
version = "0.1.0"

[features]
blst = ["blsful/default", "bulletproofs/default"]
default = ["blst"]
wasm = ["blsful/rust", "bulletproofs/std", "bulletproofs/rust", "bulletproofs/wasm"]

[dependencies]
blsful = {version = "2.4", default-features = false, optional = true}
bulletproofs = {path = "../bulletproofs-wasm", default-features = false, optional = true}
hex = "0.4"
indexmap = "2"
merlin = "3"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
regex = "1"
serde = {version = "1", features = ["serde_derive"]}
serde_bare = "0.5"
serde_json = "1"
serde_regex = "1"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.4.1"
uint-zigzag = {version = "0.2", features = ["std"]}
zeroize = "1"

[dev-dependencies]
maplit = "1"
serde_cbor = "0.11"
sha2 = "0.10"
