[package]
edition = "2021"
name = "credx"
version = "0.1.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
name = "credx"
path = "src/lib.rs"

[features]
bench = ["bincode", "serde_cbor"]
blst = ["blsful/default", "bulletproofs/default"]
# default = ["wasm"]
default = ["blst"]
wasm = ["blsful/rust", "bulletproofs/std", "bulletproofs/rust", "bulletproofs/wasm"]

[dependencies]
base64 = "0.21.5"
bcs = {version = "0.1.6"}
bincode = {versino = "1.3.3", optional = true}
blsful = {path = "../blsful", default-features = false, optional = true}
bs58 = "0.5.0"
bulletproofs = {path = "../bulletproofs-wasm", default-features = false, optional = true}
hex = "0.4"
indexmap = "2"
merlin = "3"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
regex = "1"
serde = {version = "1", features = ["serde_derive"]}
serde_bare = "0.5"
serde_cbor = {version = "0.11", optional = true}
serde_json = "1"
serde_regex = "1"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2.4.1"
uint-zigzag = {version = "0.2", features = ["std"]}
zeroize = "1"

[dev-dependencies]
maplit = "1"
serde_cbor = "0.11"
sha2 = "0.10"

[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.38"
