[workspace]

[package]
authors = ["Nikita Khateev <nikita.khateev@dsr-corporation.com>"]
edition = "2015"
name = "amcl"
version = "0.2.0"

description = "The Apache Milagro Cryptographic Library (version 3)"
license = "Apache-2.0"
repository = "https://github.com/milagro-crypto/amcl"

[lib]
name = "amcl"
path = "src/lib.rs"

[features]
ansii = []
bls24 = []
bls381 = []
bls383 = []
bls461 = []
bls48 = []
bn254 = []
bn254CX = []
brainpool = []
c25519 = []
c41417 = []
default = ["bn254"]
ed25519 = []
fp256bn = []
fp512bn = []
goldilocks = []
hifive = []
nist256 = []
nist384 = []
nist521 = []
nums256e = []
nums256w = []
nums384e = []
nums384w = []
nums512e = []
nums512w = []
rsa2048 = []
rsa3072 = []
rsa4096 = []
secp256k1 = []

[dependencies]
serde = {version = "1.0.192", features = ["derive"]}
