[package]
edition = "2021"
name = "sion"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sion"
path = "src/lib/mod.rs"

[dependencies]
bbs = "0.4.1"
# bbs_plus = "0.16.0"
hex = "0.4.3"
# serde = {version = "1.0", default-features = false, features = ["alloc"]}
