[package]
name = "anchor-cli"
version = "0.29.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
rust-version = "1.60"
edition = "2021"
repository = "https://github.com/coral-xyz/anchor"
description = "Anchor CLI"
license = "Apache-2.0"

[[bin]]
name = "anchor"
path = "src/bin/main.rs"

[features]
dev = []

[dependencies]
anchor-client = { path = "../client", version = "0.29.0" }
anchor-lang = { path = "../lang", version = "0.29.0" }
anchor-syn = { path = "../lang/syn", features = ["event-cpi", "idl-parse", "init-if-needed"], version = "0.29.0" }
anyhow = "1.0.75"
base64 = "0.21"
bincode = "1.3.3"
cargo_toml = "0.17.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0.28"
heck = "0.4.1"
pathdiff = "0.2.1"
portpicker = "0.1.1"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features = false, features = ["multipart", "blocking", "rustls-tls"] }
semver = "1.0.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
solana-client = "1.17"
solana-cli-config = "1.17"
solana-faucet = "1.17"
solana-program = "1.17"
solana-sdk = "1.17"
# Pin solang-parser because it may break in a backwards incompatible way in minor versions
solang-parser = "=0.3.3"
syn = { version = "2.0.39", features = ["full", "extra-traits"] }
tar = "0.4.40"
toml = "0.8.8"
walkdir = "2.4.0"
