[package]
name = "curve25519-dalek"
# Before incrementing:
# - update CHANGELOG
# - update README if required by semver
# - if README was updated, also update module documentation in src/lib.rs
authors = [
  "Isis Lovecruft <isis@patternsinthevoid.net>",
  "Henry de Valence <hdevalence@hdevalence.ca>",
]
categories = ["cryptography", "no-std"]
description = "A pure-Rust implementation of group operations on ristretto255 and Curve25519"
documentation = "https://docs.rs/curve25519-dalek"
edition = "2021"
exclude = [
  "**/.gitignore",
  ".gitignore",
]
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
keywords = ["cryptography", "crypto", "ristretto", "curve25519", "ristretto255"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/curve25519-dalek"
rust-version = "1.60.0"
version = "4.1.1"

[package.metadata.docs.rs]
features = ["serde", "rand_core", "digest", "legacy_compatibility", "group-bits"]
rustdoc-args = [
  "--html-in-header",
  "docs/assets/rustdoc-include-katex-header.html",
  "--cfg",
  "docsrs",
]

[dev-dependencies]
bincode = "1"
criterion = {version = "0.5", features = ["html_reports"]}
hex = "0.4.2"
rand = "0.8"
rand_core = {version = "0.6", default-features = false, features = ["getrandom"]}
sha2 = {version = "0.10", default-features = false}

[build-dependencies]
platforms = "3.0.2"
rustc_version = "0.4.0"

[[bench]]
harness = false
name = "dalek_benchmarks"
required-features = ["alloc", "rand_core"]

[dependencies]
cfg-if = "1"
digest = {version = "0.10", default-features = false, optional = true}
ff = {version = "0.13", default-features = false, optional = true}
group = {version = "0.13", default-features = false, optional = true}
rand_core = {version = "0.6.4", default-features = false, optional = true}
serde = {version = "1.0", default-features = false, optional = true, features = ["derive"]}
subtle = {version = "2.3.0", default-features = false}
zeroize = {workspace = true, default-features = false, optional = true}

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.6"

[target.'cfg(curve25519_dalek_backend = "fiat")'.dependencies]
fiat-crypto = {version = "0.2.1", default-features = false}

[features]
alloc = ["zeroize?/alloc"]
default = ["alloc", "precomputed-tables", "zeroize"]
group = ["dep:group", "rand_core"]
group-bits = ["group", "ff/bits"]
legacy_compatibility = []
precomputed-tables = []

[target.'cfg(all(not(curve25519_dalek_backend = "fiat"), not(curve25519_dalek_backend = "serial"), target_arch = "x86_64"))'.dependencies]
curve25519-dalek-derive = {version = "0.1", path = "../curve25519-dalek-derive"}
