[package]
authors = [
  "isis lovecruft <isis@patternsinthevoid.net>",
  "Tony Arcieri <bascule@gmail.com>",
  "Michael Rosenberg <michael@mrosenberg.pub>",
]
categories = ["cryptography", "no-std"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
documentation = "https://docs.rs/ed25519-dalek"
edition = "2021"
exclude = [".gitignore", "TESTVECTORS", "VALIDATIONVECTORS", "res/*"]
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
license = "BSD-3-Clause"
name = "ed25519-dalek"
readme = "README.md"
repository = "https://github.com/dalek-cryptography/ed25519-dalek"
rust-version = "1.60"
version = "2.0.0-rc.3"

[package.metadata.docs.rs]
features = ["batch", "digest", "hazmat", "pem", "serde"]
rustdoc-args = [
  "--html-in-header",
  "docs/assets/rustdoc-include-katex-header.html",
  "--cfg",
  "docsrs",
]

[dependencies]
# curve25519-dalek = {version = "=4.0.0-rc.3", default-features = false, features = ["digest"]}
curve25519-dalek = {workspace = true, default-features = false, features = ["digest"]}
ed25519 = {version = ">=2.2, <2.3", default-features = false}
sha2 = {version = "0.10", default-features = false}
signature = {version = ">=2.0, <2.1", optional = true, default-features = false}

# optional features
merlin = {version = "3", default-features = false, optional = true}
rand_core = {version = "0.6.4", default-features = false, optional = true}
serde = {version = "1.0", default-features = false, optional = true}
zeroize = {version = "1.5", default-features = false, optional = true}

[dev-dependencies]
bincode = "1.0"
blake2 = "0.10"
criterion = {version = "0.4", features = ["html_reports"]}
# curve25519-dalek = {version = "=4.0.0-rc.3", default-features = false, features = ["digest", "rand_core"]}
curve25519-dalek = {workspace = true, default-features = false, features = ["digest", "rand_core"]}
hex = "0.4"
hex-literal = "0.3"
rand = "0.8"
rand_core = {version = "0.6.4", default-features = false}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha3 = "0.10"
toml = {version = "0.5"}

[[bench]]
harness = false
name = "ed25519_benchmarks"
required-features = ["rand_core"]

[features]
alloc = ["curve25519-dalek/alloc", "ed25519/alloc", "serde?/alloc", "zeroize/alloc"]
default = ["fast", "std", "zeroize"]
std = ["alloc", "ed25519/std", "serde?/std", "sha2/std"]

asm = ["sha2/asm"]
batch = ["alloc", "merlin", "rand_core"]
digest = ["signature/digest"]
fast = ["curve25519-dalek/precomputed-tables"]
# Exposes the hazmat module
hazmat = []
# Turns off stricter checking for scalar malleability in signatures
legacy_compatibility = ["curve25519-dalek/legacy_compatibility"]
pem = ["alloc", "ed25519/pem", "pkcs8"]
pkcs8 = ["ed25519/pkcs8"]
rand_core = ["dep:rand_core"]
serde = ["dep:serde", "ed25519/serde"]
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]
